@@ -62,6 +62,7 @@
       "runtime" : {
          "requires" : {
             "Carp" : "0",
+            "Config::Std" : "0",
             "Dist::Zilla" : "0",
             "Dist::Zilla::Plugin::Authority" : "1.009",
             "Dist::Zilla::Plugin::AutoPrereqs" : "0",
