@@ -1,0 +1,2 @@
+[InputOutput::RequireCheckedSyscalls]
+exclude_functions = print
